[build-system]
requires = ["flit_core >=3.2"]
build-backend = "flit_core.buildapi"

[project]
name = "cryoswath"
version = "0.2.1.post4"
authors = [
  { name="Jan Haacker", email="j.m.haacker@tudelft.nl" },
]
description = "Swath processing toolbox for CryoSat-2"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]
keywords = ["glacier", "altimetry", "swath", "cryosat"]
dependencies = [
    "dask",
    "defusedxml",
    "geopandas",
    "gitpython",
    "h5netcdf",
    "h5py",
    "matplotlib",
    "numpy",
    "packaging",
    "pandas",
    "pyarrow",
    "pyogrio",
    "pyproj",
    "tables",
    "python-dateutil",
    "rasterio",
    "rioxarray",
    "scikit-learn",
    "scipy",
    "shapely",
    "statsmodels",
    "tqdm",
    "xarray",
    "zarr"
]

[project.license]
file = "LICENSE.txt"
# ... = "MIT"

[project.optional-dependencies]
doc = ["sphinx"]
notebooks = ["ipykernel"]

[project.urls]
Repository = "https://github.com/j-haacker/cryoswath.git"
Documentation = "https://cryoswath.readthedocs.io/"
Issues = "https://github.com/j-haacker/cryoswath/issues"

[project.scripts]
cryoswath-init = "cryoswath.misc:init_project"

[tool.pytest.ini_options]
pythonpath = ["."]
